# YGO-BOT

./: .gitignore  .gitmodules  Architecture de Conception d'un Agent Intelligent Autonome pour le Simulateur Yu-Gi-Oh! Omega.txt  Dockerfile  README.md  alembic.ini  check.py  check_dim.py  clean_db.py  diff.txt  fix_db.py  generate_plot.py  pyproject.toml  scratch_patch_utf8.patch  test_card_reader.py  test_destroy.py  test_jit_lstm.py  test_loc  test_loc.cpp  test_parser.py  test_run.py  test_translator.py
_bmad/: config.toml  config.user.toml
_bmad-output/: converted.patch  review-diff-1.3.patch  review-diff-1.4-utf8.patch  review-diff-1.4.patch  review-diff-1.4.patch.utf8  review-diff-2.1.patch  review-diff-2.2.patch  review-diff-2.3-utf8.patch  review-diff-2.3.patch  review-diff-2.4.patch  review-diff-3.1.patch  review-diff-3.2-utf8.patch  review-diff-3.2.patch  review-diff-3.3-utf8.patch  review-diff-3.3.patch  review-diff-3.4-utf8.patch  review-diff-3.4.patch  review-diff-4.1.patch  review-diff-4.1.utf8.patch  review-diff-4.2.patch  review-diff-5.4.patch  review-diff-6.1-utf8-converted.patch  review-diff-6.1-utf8.patch  review-diff-6.1.patch  review-diff-6.2-utf8.patch  review-diff-6.2.patch  review-diff-6.3-utf8-converted.patch  review-diff-6.3.patch  review-diff-6.4-utf8-proper.patch  review-diff-6.4-utf8.patch  review-diff-all-utf8.patch  review-diff-all.patch  review-diff.patch  temp_diff.patch
ai/: agent.py  distributed.py  embeddings.py  inference.py  mcts.py  network.py  ppo.py  self_play.py
alembic/: env.py
api/: deck_routes.py  duel_routes.py  (+3 more)
(+92 files in other folders)
